研究方向补全

--- a/public/research/index.html
+++ b/public/research/index.html
@@ -1665,7 +1665,7 @@
       class="relative block aspect-video"
       href="/url_test/research/%E6%9C%89%E8%89%B2%E9%87%91%E5%B1%9E%E6%89%93%E7%A3%A8/" >
 
-      <img alt="有色金属打磨"
+      <img alt="有色金属自动打磨机器人"
            class="object-fill transition-all"
            data-nimg="fill"
            decoding="async"
@@ -1682,7 +1682,7 @@
       
       <h2 class="text-lg font-semibold leading-snug tracking-tight mt-2 dark:text-white"><a
         href="/url_test/research/%E6%9C%89%E8%89%B2%E9%87%91%E5%B1%9E%E6%89%93%E7%A3%A8/" ><span
-        class="bg-gradient-to-r from-primary-200 to-primary-100 bg-[length:0px_10px] bg-left-bottom bg-no-repeat transition-[background-size] duration-500 hover:bg-[length:100%_3px] group-hover:bg-[length:100%_10px] dark:from-primary-800 dark:to-primary-900">有色金属打磨
+        class="bg-gradient-to-r from-primary-200 to-primary-100 bg-[length:0px_10px] bg-left-bottom bg-no-repeat transition-[background-size] duration-500 hover:bg-[length:100%_3px] group-hover:bg-[length:100%_10px] dark:from-primary-800 dark:to-primary-900">有色金属自动打磨机器人
           </span></a>
       </h2>
       
